--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link href="https://fonts.googleapis.com/css2" rel="stylesheet" type="text/css">
+  <link href="https://api.fontshare.com/v2/css?f[]=clash-display@500&f[]=general-sans@500&display=swap"
+    rel="stylesheet">
+
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Abdulraheem Mikail.com</title>
