--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link href="https://api.fontshare.com/v2/css?f[]=clash-display@500&f[]=general-sans@500&display=swap"
+  <link href="https://api.fontshare.com/v2/css?f[]=clash-display@500&f[]=general-sans@500&f[]=britney@700&display=swap"
     rel="stylesheet">
 
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
