--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link href="https://api.fontshare.com/v2/css?f[]=clash-display@500&f[]=general-sans@500&f[]=britney@700&display=swap"
+  <link
+    href="https://api.fontshare.com/v2/css?f[]=clash-display@500&f[]=general-sans@500,300&f[]=britney@700&f[]=boska@300&display=swap"
     rel="stylesheet">
+
 
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
